<resources>
    <string name="app_name">Project2</string>
    <string name="action_settings">Settings</string>
    <string name="pick">Pick a topic:</string>
    <string name="take">Take this quiz</string>
    <string name="create">Create a question for this topic</string>
    <string name="delete">Delete this topic</string>
    <string name="add">Add new topic</string>
    <string name="title_activity_take_quiz">TakeQuizActivity</string>
    <string name="answered">Not Answered</string>
    <string name="questio">Question</string>
    <string name="title_activity_answer_question">AnswerQuestionActivity</string>
    <string name="title_activity_create_question">CreateQuestionActivity</string>
</resources>
